# traact_bundleadjustment

./: CMakeLists.txt  conanfile.py
apps/: CMakeLists.txt  artekmed_bundleadjustment.cpp  artekmed_init_pose.cpp  artekmed_kinect_registration.cpp  artekmed_target_tracking.cpp
include/traact/ba/: BACamera.cpp  BACamera.h  BAData.cpp  BAData.h  BAProblemLoader.cpp  BAProblemLoader.h  BATarget.cpp  BATarget.h  BundleAdjustment.cpp  BundleAdjustment.h
include/traact/ba/cost_function/: CeresRefNPointReprojectionError.h  CeresRefTargetNPointLengthError.h  CeresTargetNPointReprojectionError.h  CostFunctionUtils.h
include/traact/util/: YAMLUtil.cpp  YAMLUtil.h
misc/: BoardTarget.json  BoardTarget_Narvis.json  LTarget.json  cadaver_ba.yml  inm_ba.yml  narvisTarget2charucoMarker.json  narvisTarget2charucoMarker.txt  rotated_narvisTarget2charucoMarker.json
src/traact/: CeresRefNPointReprojectionError.h  CeresRefTargetReprojectionError.h  CeresWandLengthError.h  CeresWandReprojectionError.h  MultiKinectPlayback.cpp  MultiKinectPlayback.h  PoseLogger.cpp  PoseLogger.h  TraactBACamera.cpp  TraactBACamera.h  TraactKinectIRRegistration.cpp  TraactKinectIRRegistration.h  ba_datatypes.cpp  ba_datatypes.h
tests/: CMakeLists.txt
tests/cost_function/: Test_calculate3DDistances.cpp  Test_count3DDistances.cpp
